# GovPeep-API

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs
src/handlers/: agencies.rs  auth.rs  foia.rs  mod.rs
src/models/: agency.rs  foia.rs  mod.rs  user.rs
